cmake_minimum_required (VERSION 2.6)
project (OVS_Port)
IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
include_directories("$ENV{INCLUDE}")
include_directories("${OVS_Port_SOURCE_DIR}/windows")
include_directories("${OVS_Port_SOURCE_DIR}/windows/thirdparty")
link_directories("${OVS_Port_SOURCE_DIR}//windows/thirdparty")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
include_directories("${OVS_Port_SOURCE_DIR}")
include_directories("${OVS_Port_SOURCE_DIR}/include")
include_directories("${OVS_Port_SOURCE_DIR}/lib")
include_directories("${OVS_Port_SOURCE_DIR}/ofproto")
include_directories("${OVS_Port_SOURCE_DIR}/ovsdb")
include_directories("${OVS_Port_SOURCE_DIR}/utilities")
include_directories("${OVS_Port_SOURCE_DIR}/tests")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
include_directories("${OVS_Port_SOURCE_DIR}/windows")
LINK_LIBRARIES(${OVS_Port_SOURCE_DIR}/windows/thirdparty/libeay32.lib)
LINK_LIBRARIES(${OVS_Port_SOURCE_DIR}/windows/thirdparty/ssleay32.lib)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

add_subdirectory(lib)
add_subdirectory(ofproto)
add_subdirectory(ovsdb)
add_subdirectory(utilities)
add_subdirectory(vswitchd)
add_subdirectory(tests)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
add_subdirectory(windows)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
